--- a/src/geopd/templates/base.html
+++ b/src/geopd/templates/base.html
@@ -8,6 +8,7 @@
 <meta name="description" content="{{ config.APP_NAME }}">
 <meta name="author" content="Omar Zabaneh">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="csrf-token" content="{{ csrf_token() }}">
 {{ super() }}
 {% endblock %}
 
